# edenailabs-paytm-ai-hackathon

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  CUTOVER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: growth_advisor.py  strategy_researcher.py
backend/app/core/: auth.py  budget.py  config.py  errors.py  llm.py
backend/app/integrations/: cse.py  gallabox.py  geocode.py  msg91.py  places.py  supabase.py
backend/app/ml/: features.py  lead_scoring.py  model_store.py  nba.py  trainer.py
backend/app/rag/: __init__.py  embeddings.py  ingest.py  reddit_miner.py  store.py
backend/app/routers/: calls.py  discovery.py  health.py  insights.py  messaging.py  outreach.py  pipeline.py  strategy.py  website.py
backend/app/schemas/: calls.py  common.py  discovery.py  insights.py  messaging.py  outreach.py  pipeline.py  strategy.py  website.py
backend/app/services/: calls.py  discovery.py  messaging.py  outreach.py  pipeline.py  strategy.py  website.py
backend/app/workers/: greetings.py  scheduler.py
backend/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
backend/migrations/: 003_backend_core.sql  004_rag.sql  005_agents.sql
backend/tests/: conftest.py  smoke.py  test_calls_website.py  test_discovery.py  test_health.py  test_lead_model.py  test_messaging.py  test_nba.py  test_outreach.py  test_pipeline.py  test_rag.py  test_strategy.py  test_workers.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  (+2 more)
(+69 files in other folders)
