[project]
name = "seriouspreneur-backend"
version = "0.1.0"
description = "Agentic Python backend replacing the Seriouspreneur n8n workflows"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
